Revert "Fix: Set .gridContainer gap to 0 4vw"
This reverts commit 18978ebb32614555d6dbb3a3102c1832e152b559.

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -4,9 +4,11 @@
 }
 
 .gridContainer {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-    gap: 0 4vw;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 8vw 4vw;
+  padding: 0 5vw;
+  margin-top: 5vh;
 }
 
 /* Offset every second item for a staggered look */
